Update several package.json dependencies

--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcfarljw/datauri-brunch.git"
+    "url": "https://github.com/mcfarljw/datauri-brunch"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha"
   },
   "dependencies": {
-    "async": "~2.1.0",
-    "lodash": "~4.17.0",
-    "loggy": "~0.3.0",
-    "mime-types": "~2.1.0"
+    "async": "~2.1",
+    "lodash": "~4.17",
+    "loggy": "~1.0",
+    "mime-types": "~2.1"
   },
   "devDependencies": {
-    "chai": "~3.5.0",
-    "mocha": "~3.1.0"
+    "chai": "~3.5",
+    "mocha": "~3.2"
   }
 }
